feat(catalog): Update Camel runtime to 4.15
Previously, the catalog generator used Camel 4.12 for the catalog
generation API. This commit updates it to the latest version available.

In addition to that, a better logging format is configured so its easier
to investigate issues and breaking changes found.